<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    android:padding="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activity_send_rules_label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_label1"
            android:textColor="@color/activity_send_rules_text"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/listview_element_separator" />

        <TextView
            android:id="@+id/activity_send_rules_label2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_label2"
            android:textColor="@color/activity_send_rules_text"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/listview_element_separator" />

        <TextView
            android:id="@+id/activity_send_rules_rule1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule1"
            android:textColor="@color/activity_send_rules_text" />

        <TextView
            android:id="@+id/activity_send_rules_rule2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule2"
            android:textColor="@color/activity_send_rules_text" />

        <TextView
            android:id="@+id/activity_send_rules_rule3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule3"
            android:textColor="@color/activity_send_rules_text" />

        <TextView
            android:id="@+id/activity_send_rules_rule4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule4"
            android:textColor="@color/activity_send_rules_text" />

        <TextView
            android:id="@+id/activity_send_rules_rule5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule5"
            android:textColor="@color/activity_send_rules_text" />

        <TextView
            android:id="@+id/activity_send_rules_rule6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule6"
            android:textColor="@color/activity_send_rules_text" />

        <TextView
            android:id="@+id/activity_send_rules_rule7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule7"
            android:textColor="@color/activity_send_rules_text" />

        <TextView
            android:id="@+id/activity_send_rules_rule8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule8"
            android:textColor="@color/activity_send_rules_text" />

        <TextView
            android:id="@+id/activity_send_rules_rule9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_send_rules_rule9"
            android:textColor="@color/activity_send_rules_text" />
    </LinearLayout>

</ScrollView>