<?xml version="1.0" encoding="utf-8"?>
<!-- LAYOUT-LAND SPECIFIC COPY a LARGE COPY -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/activity_report_padding" >

        <TextView
            android:id="@+id/activity_report_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/activity_report_label_padding"
            android:text="@string/activity_report_label"
            android:textSize="@dimen/activity_report_label" />

        <sk.gryfonnlair.priznaj.view.ui.AdaptWidthImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/activity_report_imageview_idea_description"
            android:src="@drawable/activity_report_idea_icon" />

        <TextView
            android:id="@+id/activity_report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/activity_report_text_padding"
            android:text="@string/activity_report_text"
            android:textSize="@dimen/activity_report_text" />

        <Button
            android:id="@+id/activity_report_button_send"
            style="@style/PButton"
            android:text="@string/activity_report_button_text" />

        <TextView
            android:id="@+id/activity_report_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/activity_report_text_padding"
            android:text="@string/activity_report_text2"
            android:textSize="@dimen/activity_report_text" />

        <Button
            android:id="@+id/activity_report_button_send2"
            style="@style/PButton"
            android:text="@string/activity_report_button_text2" />
    </LinearLayout>

</ScrollView>